k8s/hello-world-dropwizard-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-dropwizard
  namespace: dev
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-dropwizard
        tier: backend
    spec:
      containers:
      - name: hello-dropwizard
        image: karthi102/hello1:19
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
