k8s/hello-world-dropwizard-ingressservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-dropwizard
  namespace: dev
  labels:
    app: hello-dropwizard
    tier: backend
spec:
  type: NodePort
  ports:
    # the port that this service should serve on
  - port: 80
    nodePort: 31001
    targetPort: http-port
    protocol: TCP
  selector:
    app: hello-dropwizard
    tier: backend
