k8s/hello-world-dropwizard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-dropwizard
  namespace: dev
  labels:
    app: hello-dropwizard
    tier: backend
spec:
  type: LoadBalancer
  ports:
    # the port that this service should serve on
  - port: 8080
  selector:
    app: hello-dropwizard
    tier: backend
