k8s/helloingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-dropwizard
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - path: /hello-world
        backend:
          serviceName: hello-dropwizard
          servicePort: 8080
