k8s/ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-dropwizard
  #namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /hello-world
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-dropwizard
          servicePort: 8080
